@YELP_HELP_RULES@

HELP_ID = mate-accessx-status
HELP_FILES = index.docbook legal.xml

HELP_MEDIA = figures/accessx_bounce-keys.png \
	figures/accessx_mouse-keys.png \
	figures/accessx_slow-keys.png \
	figures/accessx-status-applet.png \
	figures/accessx-status-disabled.png \
	figures/accessx_sticky-altGr-key.png \
	figures/accessx_sticky-ctrl-key.png \
	figures/accessx_sticky-keys.png \
	figures/accessx_sticky-meta-key.png \
	figures/accessx_sticky-shift-key.png \
	figures/accessx_sticky-windows-key.png

HELP_LINGUAS = bg ca cs de el en_GB es eu fi fr gl it ko nl oc sv uk zh_CN

-include $(top_srcdir)/git.mk
