iconsdir = $(datadir)/icons/hicolor

png_icons = \
	16x16/apps/mate-ax-bouncekeys.png \
	16x16/apps/mate-ax-key-base.png \
	16x16/apps/mate-ax-key-inverse.png \
	16x16/apps/mate-ax-key-none.png \
	16x16/apps/mate-ax-key-no.png \
	16x16/apps/mate-ax-key-yes.png \
	16x16/apps/mate-ax-slowkeys-no.png \
	16x16/apps/mate-ax-slowkeys-pending.png \
	16x16/apps/mate-ax-slowkeys.png \
	16x16/apps/mate-ax-slowkeys-yes.png \
	16x16/apps/mate-mousekeys-base.png \
	16x16/apps/mate-mousekeys-default-left.png \
	16x16/apps/mate-mousekeys-default-middle.png \
	16x16/apps/mate-mousekeys-default-right.png \
	16x16/apps/mate-mousekeys-pressed-left.png \
	16x16/apps/mate-mousekeys-pressed-middle.png \
	16x16/apps/mate-mousekeys-pressed-right.png \
	16x16/apps/mate-sticky-alt-latched.png \
	16x16/apps/mate-sticky-alt-locked.png \
	16x16/apps/mate-sticky-alt-none.png \
	16x16/apps/mate-sticky-ctrl-latched.png \
	16x16/apps/mate-sticky-ctrl-locked.png \
	16x16/apps/mate-sticky-ctrl-none.png \
	16x16/apps/mate-sticky-hyper-latched.png \
	16x16/apps/mate-sticky-hyper-locked.png \
	16x16/apps/mate-sticky-hyper-none.png \
	16x16/apps/mate-sticky-meta-latched.png \
	16x16/apps/mate-sticky-meta-locked.png \
	16x16/apps/mate-sticky-meta-none.png \
	16x16/apps/mate-sticky-shift-latched.png \
	16x16/apps/mate-sticky-shift-locked.png \
	16x16/apps/mate-sticky-shift-none.png \
	16x16/apps/mate-sticky-super-latched.png \
	16x16/apps/mate-sticky-super-locked.png \
	16x16/apps/mate-sticky-super-none.png \
	24x24/apps/mate-ax-bouncekeys.png \
	24x24/apps/mate-ax-key-base.png \
	24x24/apps/mate-ax-key-inverse.png \
	24x24/apps/mate-ax-key-none.png \
	24x24/apps/mate-ax-key-no.png \
	24x24/apps/mate-ax-key-yes.png \
	24x24/apps/mate-ax-slowkeys-no.png \
	24x24/apps/mate-ax-slowkeys-pending.png \
	24x24/apps/mate-ax-slowkeys.png \
	24x24/apps/mate-ax-slowkeys-yes.png \
	24x24/apps/mate-mousekeys-base.png \
	24x24/apps/mate-mousekeys-default-left.png \
	24x24/apps/mate-mousekeys-default-middle.png \
	24x24/apps/mate-mousekeys-default-right.png \
	24x24/apps/mate-mousekeys-pressed-left.png \
	24x24/apps/mate-mousekeys-pressed-middle.png \
	24x24/apps/mate-mousekeys-pressed-right.png \
	24x24/apps/mate-sticky-alt-latched.png \
	24x24/apps/mate-sticky-alt-locked.png \
	24x24/apps/mate-sticky-alt-none.png \
	24x24/apps/mate-sticky-ctrl-latched.png \
	24x24/apps/mate-sticky-ctrl-locked.png \
	24x24/apps/mate-sticky-ctrl-none.png \
	24x24/apps/mate-sticky-hyper-latched.png \
	24x24/apps/mate-sticky-hyper-locked.png \
	24x24/apps/mate-sticky-hyper-none.png \
	24x24/apps/mate-sticky-meta-latched.png \
	24x24/apps/mate-sticky-meta-locked.png \
	24x24/apps/mate-sticky-meta-none.png \
	24x24/apps/mate-sticky-shift-latched.png \
	24x24/apps/mate-sticky-shift-locked.png \
	24x24/apps/mate-sticky-shift-none.png \
	24x24/apps/mate-sticky-super-latched.png \
	24x24/apps/mate-sticky-super-locked.png \
	24x24/apps/mate-sticky-super-none.png \
	32x32/apps/mate-ax-bouncekeys.png \
	32x32/apps/mate-ax-key-base.png \
	32x32/apps/mate-ax-key-inverse.png \
	32x32/apps/mate-ax-key-none.png \
	32x32/apps/mate-ax-key-no.png \
	32x32/apps/mate-ax-key-yes.png \
	32x32/apps/mate-ax-slowkeys-no.png \
	32x32/apps/mate-ax-slowkeys-pending.png \
	32x32/apps/mate-ax-slowkeys.png \
	32x32/apps/mate-ax-slowkeys-yes.png \
	32x32/apps/mate-mousekeys-base.png \
	32x32/apps/mate-mousekeys-default-left.png \
	32x32/apps/mate-mousekeys-default-middle.png \
	32x32/apps/mate-mousekeys-default-right.png \
	32x32/apps/mate-mousekeys-pressed-left.png \
	32x32/apps/mate-mousekeys-pressed-middle.png \
	32x32/apps/mate-mousekeys-pressed-right.png \
	32x32/apps/mate-sticky-alt-latched.png \
	32x32/apps/mate-sticky-alt-locked.png \
	32x32/apps/mate-sticky-alt-none.png \
	32x32/apps/mate-sticky-ctrl-latched.png \
	32x32/apps/mate-sticky-ctrl-locked.png \
	32x32/apps/mate-sticky-ctrl-none.png \
	32x32/apps/mate-sticky-hyper-latched.png \
	32x32/apps/mate-sticky-hyper-locked.png \
	32x32/apps/mate-sticky-hyper-none.png \
	32x32/apps/mate-sticky-meta-latched.png \
	32x32/apps/mate-sticky-meta-locked.png \
	32x32/apps/mate-sticky-meta-none.png \
	32x32/apps/mate-sticky-shift-latched.png \
	32x32/apps/mate-sticky-shift-locked.png \
	32x32/apps/mate-sticky-shift-none.png \
	32x32/apps/mate-sticky-super-latched.png \
	32x32/apps/mate-sticky-super-locked.png \
	32x32/apps/mate-sticky-super-none.png \
	48x48/apps/mate-ax-bouncekeys.png \
	48x48/apps/mate-ax-key-base.png \
	48x48/apps/mate-ax-key-inverse.png \
	48x48/apps/mate-ax-key-none.png \
	48x48/apps/mate-ax-key-no.png \
	48x48/apps/mate-ax-key-yes.png \
	48x48/apps/mate-ax-slowkeys-no.png \
	48x48/apps/mate-ax-slowkeys-pending.png \
	48x48/apps/mate-ax-slowkeys.png \
	48x48/apps/mate-ax-slowkeys-yes.png \
	48x48/apps/mate-mousekeys-base.png \
	48x48/apps/mate-mousekeys-default-left.png \
	48x48/apps/mate-mousekeys-default-middle.png \
	48x48/apps/mate-mousekeys-default-right.png \
	48x48/apps/mate-mousekeys-pressed-left.png \
	48x48/apps/mate-mousekeys-pressed-middle.png \
	48x48/apps/mate-mousekeys-pressed-right.png \
	48x48/apps/mate-sticky-alt-latched.png \
	48x48/apps/mate-sticky-alt-locked.png \
	48x48/apps/mate-sticky-alt-none.png \
	48x48/apps/mate-sticky-ctrl-latched.png \
	48x48/apps/mate-sticky-ctrl-locked.png \
	48x48/apps/mate-sticky-ctrl-none.png \
	48x48/apps/mate-sticky-hyper-latched.png \
	48x48/apps/mate-sticky-hyper-locked.png \
	48x48/apps/mate-sticky-hyper-none.png \
	48x48/apps/mate-sticky-meta-latched.png \
	48x48/apps/mate-sticky-meta-locked.png \
	48x48/apps/mate-sticky-meta-none.png \
	48x48/apps/mate-sticky-shift-latched.png \
	48x48/apps/mate-sticky-shift-locked.png \
	48x48/apps/mate-sticky-shift-none.png \
	48x48/apps/mate-sticky-super-latched.png \
	48x48/apps/mate-sticky-super-locked.png \
	48x48/apps/mate-sticky-super-none.png \
	$(NULL)

nobase_dist_icons_DATA = \
	$(png_icons) \
	$(NULL)

gtk_update_icon_cache = gtk-update-icon-cache -f -t $(iconsdir)

install-data-hook: update-icon-cache
uninstall-hook: update-icon-cache
update-icon-cache:
	@-if test -z "$(DESTDIR)"; then \
		echo "Updating Gtk icon cache."; \
		$(gtk_update_icon_cache); \
	else \
		echo "*** Icon cache not updated. After install, run this:"; \
		echo "***   $(gtk_update_icon_cache)"; \
	fi

-include $(top_srcdir)/git.mk
