@YELP_HELP_RULES@

HELP_ID = mate-battstat
HELP_FILES = index.docbook legal.xml

HELP_MEDIA = figures/battstat-applet-expanded.png \
		figures/battstat-applet.png \
		figures/battstat-credits-hal.png \
		figures/battstat-preferences.png \
		figures/context-menu.png

HELP_LINGUAS = ca cs bg da de el en_GB es eu fi fr ko oc pa pt_BR sv uk zh_CN

-include $(top_srcdir)/git.mk
