@YELP_HELP_RULES@

HELP_ID = mate-char-palette
HELP_FILES = index.docbook legal.xml

HELP_MEDIA = figures/charpalette_applet.png \
		figures/charpalette_chargroup.png \
		figures/charpick_characters.png \
		figures/charpick-preferences.png

HELP_LINGUAS = bg ca cs de el en_GB es eu fi fr it ko nl oc pt_BR ru sv uk zh_CN

-include $(top_srcdir)/git.mk
